# aoike-ssg

./: AGENTS.md  Cargo.toml  README.md  draft.md  flake.nix
.claude/: settings.local.json
docs/: architecture.md  backend-guide.md  data-model.md  output-format.md
example/dioxus-docsgen/: build.rs
example/doc-src/posts/: test copy.md  测试.md
example/leptos/: .gitignore  Trunk.toml  build.rs
example/sycamore/: build.rs  index.html  justfile
example/sycamore/src/: main.rs
examples/doc-src/: index.md
examples/doc-src/notes/notea/articleeee/: main.typ
examples/doc-src/notes/notea/section with index/: index.typ
examples/doc-src/notes/notea/some section/: asd.typ
examples/doc-src/notes/noteb/: index.typ
examples/doc-src/posts/: test.md  typst.typ  测试.md
examples/doc-src/posts/folder/: main.typ
examples/leptos/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  justfile
examples/leptos/src/: main.rs
examples/sycamore/: .gitignore  Cargo.toml  README.md  build.rs  index.html  justfile
src/: build.rs  data.rs  lib.rs  main.rs
tests/: integration_test.rs
