[package]
name = "aoike"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2024"

[workspace]
# members = ["example/*", "packages/*"]
members = ["example/leptos", "packages/aoike-leptos"]

[workspace.dependencies]
aoike = { path = "." }
# aoike-dioxus = { path = "packages/aoike-dioxus" }
# aoike-sycamore = { path = "packages/aoike-sycamore" }
aoike-leptos = { path = "packages/aoike-leptos" }

[features]
default = []
build = [
    "dep:walkdir",
    "dep:pulldown-cmark",
    "dep:regex",
]

[dependencies]
time = { version = "0.3.43", features = ["wasm-bindgen", "serde"] }
anyhow = "1.0.100"
slug = "0.1.6"

walkdir = { version = "2.5.0", optional = true }
pulldown-cmark = { version = "0.13.0", optional = true }
regex = { version = "1.11.3", optional = true }
relative-path = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
rsass = "0.29.2"

[dev-dependencies]
tempfile = "3.24.0"
