[package]
name = "aoike"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2024"

[workspace]
members = ["example/*", "packages/*"]

[workspace.dependencies]
aoike = { path = "." }
aoike-dioxus = { path = "packages/aoike-dioxus" }
aoike-sycamore = { path = "packages/aoike-sycamore" }

[features]
default = []
build = [
    "dep:quote",
    "dep:proc-macro2",
    "dep:prettyplease",
    "dep:syn",
    "dep:walkdir",
    "dep:pulldown-cmark",
    "dep:slug",
    "dep:regex",
    "dep:relative-path",
    "dep:kamadak-exif",
]

[dependencies]
time = { version = "0.3.43", features = ["wasm-bindgen"] }
anyhow = "1.0.100"

quote = { version = "1.0.40", optional = true }
proc-macro2 = { version = "1.0.101", optional = true }
prettyplease = { version = "0.2.23", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
walkdir = { version = "2.5.0", optional = true }
pulldown-cmark = { version = "0.13.0", optional = true }
slug = { version = "0.1.6", optional = true }
regex = { version = "1.11.3", optional = true }
relative-path = { version = "2.0.1", optional = true }
kamadak-exif = { version = "0.6.1", optional = true }

[build-dependencies]
rsass = "0.29.2"
