[package]
name = "example-leptos"
version = "0.1.0"
authors = ["AzurIce <973562770@qq.com>"]
edition = "2024"
publish = false

[dependencies]
aoike.workspace = true
aoike-leptos = { workspace = true }
leptos = { version = "0.8.15", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.11", features = ["nightly"] }
console_error_panic_hook = "0.1"

[build-dependencies]
aoike = { workspace = true, features = ["build"] }
walkdir = "2.5.0"
relative-path = "2.0.1"
